# innuendo

./: .gitignore  CMakeLists.txt  README.md
notes/: GrockConversaton.md  OnionFederatedMessagingProtocol.md  tagline.txt
src/cli/: CMakeLists.txt  main.cpp
src/common/: dummy.cpp
src/core/: CMakeLists.txt  Socks5Client.cpp  TorClient.cpp  TorInstance.cpp  TorServer.cpp  TorStream.cpp
src/include/: EventLoop.hpp  Socks5Client.hpp  TorClient.hpp  TorInstance.hpp  TorServer.hpp  TorStream.hpp
src/relay/: CMakeLists.txt  innuendod.cpp  main.cpp
src/test/: CMakeLists.txt  TorInstanceTest.cpp
src/tor/: TorInstance.cpp  TorInstance.h
